--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1178,6 +1178,7 @@ exportar.validacio.herencia.tasca.definicio.no.trobada=La importació de dades de
 expedient.tipus.importar.form.titol.nou=Importació d'un nou tipus d'expedient
 expedient.tipus.importar.form.titol.modificar=Importació d''un tipus d''expedient sobre el tipus d''expedient "{0} - {1}"
 expedient.tipus.importar.form.avis.codi.diferent=Avís: S''està important informació del tipus d''expedient <b>"{0} - {1}"</b> amb codi diferent de l''actual sobre el que s''està realitzant la importació
+expedient.tipus.importar.form.avis.distribucio.procediment.diferent=Avís: Ja existeix a Helium el tipus d''expedient "{0} - {1}" de l''entorn "{2} - {3}" pel codi de procediment "{4}" i assumpte "{5}". Si decidiu seguir amb la importació s''assignarà un codi de procediment aleatori que haureu de corregir després de la importació.
 expedient.tipus.importar.form.avis.responsable.no.trobat=Avís: No es troba cap usuari amb el codi de responsable per defecte <b>"{0}"</b>. Si incloeu les dades bàsiques canvieu-lo posteriorment per evitar problemes.
 expedient.tipus.importar.form.boto.carregar=Carregar
 expedient.tipus.importar.form.carregar=Carregar el fitxer
