#1701 Revisar restringir accés segons el grups

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -936,6 +936,7 @@ expedient.tipus.info.camp.demana.numero=Demana número?
 expedient.tipus.info.camp.permet.retroaccio=Permet retroacció?
 expedient.tipus.info.camp.permet.reindexacioAsincrona=Reindexar asíncronament?
 expedient.tipus.info.camp.definicio.proces.inicial=Definició de procés inicial
+expedient.tipus.info.camp.restringirPerGrup=Restringir per grup?
 expedient.tipus.info.camp.reponsable.defecte=Responsable per defecte
 expedient.tipus.info.camp.reponsable.defecte.error=No s'ha pogut trobar un responsable amb aquest codi. Canvieu-lo per evitar errors
 expedient.tipus.info.accio.modificar=Modificar
@@ -975,6 +976,7 @@ expedient.tipus.form.boto.afegir=Afegir any
 expedient.tipus.form.camp.sequencia=Seqüència actual
 expedient.tipus.form.camp.responsableDefecteCodi=Responsable per defecte
 expedient.tipus.form.camp.restringirPerGrup=Restringir accés segons el grups de l'usuari
+expedient.tipus.form.camp.restringirPerGrup.info=Marcar per a que els expedients assignats a un grup només siguin visibles pels usuaris que pertanyin al grup.
 expedient.tipus.form.camp.seleccionarAny=Permetre seleccionar any d'inici d'expedient
 expedient.tipus.form.camp.ambRetroaccio=Amb retroacció
 expedient.tipus.form.camp.reindexacioAsincrona=Reindexació asíncrona
