#1701 Revisar l'opció "Restringir accés segons el grups de l'usuari"

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -587,6 +587,7 @@ expedient.info.camp.data.fi=Finalitzat el
 expedient.info.camp.estat=Estat
 expedient.info.camp.defproc=Definició de procés
 expedient.info.camp.defproc.subprocessos=Subprocessos
+expedient.info.camp.codi.grup=Codi de grup assignat a l'expedient
 expedient.info.participants=Persones participants
 expedient.info.relacionats=Expedients relacionats
 expedient.info.accio.modificar=Modificar informació
@@ -953,6 +954,8 @@ expedient.consulta.alerta.errorsReindexacio=Actualment hi ha {0} expedients amb 
 expedient.consulta.alerta.pendentsReindexacio.tip=Premi per consultar expediens pendents de reindexació.
 expedient.consulta.alerta.pendentsReindexacio=Actualment hi ha {0} expedients pendents de reindexació que podrien afectar al resultat de la consulta.
 
+expedient.consulta.grup.codi=Codi grup
+expedient.consulta.grup.codi.buit.avis=Expedient sense grup assignat, no serà visible pels usuaris no administradors de l'entorn.
 expedient.tipus.form.titol.nou=Crear nou tipus d'expedient
 expedient.tipus.form.titol.modificar=Modificar tipus d'expedient
 expedient.tipus.form.camp.codi=Codi
