#1661 Accés a expedients per permisos sobre unitats organitzatives

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -5,6 +5,7 @@ decorator.rol.usuari=Usuari
 decorator.menu.expedients=Expedients
 decorator.menu.anotacions=Anotacions
 decorator.menu.avisos=Avisos
+decorator.menu.unitats.organitzatives=Unitats organitzatives
 decorator.menu.tasques=Tasques
 decorator.menu.informes=Informes
 decorator.menu.consultes=Consultes
@@ -90,6 +91,48 @@ avis.boto.activar=Activar
 avis.boto.desactivar=Desactivar
 avis.controller.desactivat.ok=L'avís s'ha desactivat correctament
 avis.controller.activat.ok=L'avís s'ha activat correctament
+
+unitat.organitzativa.llistat.titol=Unitats Organitzatives
+unitat.organitzativa.form.titol.nou=Crear unitat organitzativa
+unitat.organitzativa.form.titol.modificar=Modificar unitat organitzativa
+unitat.organitzativa.codi=Codi
+unitat.organitzativa.denominacio=Denominació
+unitat.organitzativa.unitat.superior=Unitat Superior
+unitat.organitzativa.estat=Estat
+unitat.organitzativa.estat.vigent=Vigent
+unitat.organitzativa.estat.extingit=Extingit
+unitat.organitzativa.estat.anulat=Anul.lat
+unitat.organitzativa.estat.transitori=Transitori
+unitat.organitzativa.estat.enum.VIGENTE=Vigent
+unitat.organitzativa.estat.enum.EXTINGUIDO=Extingit
+unitat.organitzativa.estat.enum.ANULADO=Anul·lat
+unitat.organitzativa.estat.enum.TRANSITORIO=Transitori
+unitat.organitzativa.controller.creat=La unitat organitzativa s'ha creat correctament
+unitat.organitzativa.controller.modificat=La unitat organitzativa s'ha modificat correctament
+unitat.organitzativa.controller.esborrat.ok=La unitat organitzativa s'ha esborrat correctament
+unitat.organitzativa.list.boto.mostrarArbre=Mostrar arbre d'unitats vigents
+unitat.organitzativa.list.boto.synchronize=Sincronitzar
+unitat.arbre.titol=Arbre d'unitats vigents
+unitat.arbre.expandeix=Expandeix tots
+unitat.arbre.contreu=Contreu tots
+unitat.arbre.contreu.expandeixSeleccionat=Expandeix seleccionat
+unitat.arbre.unitatObsoleta=La unitat està obsoleta
+
+unitat.controller.synchronize.ok=Sincronització realitzada amb èxit
+unitat.synchronize.dialog.header=Predicció de sincronització
+unitat.synchronize.prediction.splits=DIVISIONS
+unitat.synchronize.prediction.merges=FUSIONS
+unitat.synchronize.prediction.substitucions=SUBSTITUCIONS
+unitat.synchronize.prediction.atributesChanged=CANVIS EN ATRIBUTS
+unitat.synchronize.prediction.noChanges=No hi ha canvis
+unitat.synchronize.prediction.upToDate=Les unitats organitzatives estan actualizades
+unitat.synchronize.prediction.firstSincroNoUnitatsVigent=No s'ha trobat cap unitat vigent amb aquesta unitat pare.
+unitat.synchronize.prediction.firstSincroHeader=Primera sincronització
+unitat.synchronize.prediction.firstSincroDescription=Primera sincronització. S'importaran totes les unitats vigents. 
+unitat.synchronize.prediction.noves=NOUS
+unitat.synchronize.prediction.rules= REGLES AFECTADES PER LA SINCRONITZACIÓ
+unitat.synchronize.prediction.rules.filtre=Per unitat organitzativa en el filtre
+unitat.synchronize.prediction.rules.desti=Per unitat organitzativa en l'acció de reenviar a una UO destí
 
 interessat.llistat.accio.nou=Nou interessat
 interessat.llistat.titol=Interessat
