#1661 Accés a expedients per permisos sobre unitats organitzatives
- Sincronització amb els procediments.

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -6,6 +6,7 @@ decorator.menu.expedients=Expedients
 decorator.menu.anotacions=Anotacions
 decorator.menu.avisos=Avisos
 decorator.menu.unitats.organitzatives=Unitats organitzatives
+decorator.menu.procediments=Procediments
 decorator.menu.tasques=Tasques
 decorator.menu.informes=Informes
 decorator.menu.consultes=Consultes
@@ -3104,6 +3105,21 @@ tipusArea.form.camp.codi=Codi
 tipusArea.form.camp.nom=Nom
 tipusArea.form.camp.descripcio=Descripció
 tipusArea.selector.placholder=<< Seleccioni un tipus d'àrea >>
+
+
+procediment.llistat.titol=Gestió de procediments
+procediment.llistat.filtre.procediment=Procediment
+procediment.llistat.columna.codi=Codi
+procediment.llistat.columna.nom=Nom
+procediment.llistat.columna.unitatOrganitzativa=Unitat organitzativa
+procediment.llistat.columna.codiSia=Codi SIA
+procediment.llistat.columna.estat=Estat
+procediment.estat.enum.VIGENT=Vigent
+procediment.estat.enum.EXTINGIT=Extingit
+procediment.taula.actualitzar=Actualitzar procediments
+procediment.controller.actualitzar.ok=Procediments actualitzats correctament
+procediment.controller.actualitzar.error=Ha hagut un error en l''actualització dels procediments a les unitats organitzatives: {0}
+procediment.controller.actualitzar.error.generic=Ha hagut un error no controlat en l''actualització dels procediments
 
 
 Pattern=El format no és correcte
