#1661 Accés a expedients per permisos sobre unitats organitzatives (fase 2)

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1877,6 +1877,7 @@ expedient.tipus.metadades.nti.serie.documental=Sèrie documental
 expedient.tipus.metadades.nti.controller.guardat=Els canvis s'han guardat correctament
 expedient.tipus.metadades.nti.arxiu.actiu=Integració amb arxiu activa
 expedient.tipus.metadades.nti.validacio = Errors de validació
+expedient.tipus.metadades.nti.procediment.comu=Procediment comú
 
 expedient.tipus.integracio.pinbal.validacio = Errors de validació
 expedient.tipus.integracio.pinbal.controller.guardat=Els canvis s'han guardat correctament
