#1661 Accés a expedients per permisos sobre unitats organitzatives (FASE 2 - permisos sobre tipus d'expedient)

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1033,6 +1033,7 @@ expedient.tipus.form.camp.manual.ajuda.descarregar=Descarregar manual d'ajuda
 expedient.tipus.permis.titol=Permisos del tipus d'expedient
 expedient.tipus.permis.columna.principal=Principal
 expedient.tipus.permis.columna.tipus=Tipus
+expedient.tipus.permis.columna.unitat.organitzativa=Unitat Organitzativa
 expedient.tipus.permis.columna.permisos=Permisos
 expedient.tipus.permis.confirmacio.esborrar=Estau segur que voleu esborrar aquest permís?
 expedient.tipus.permis.accio.nou=Nou permís
@@ -1042,6 +1043,7 @@ expedient.tipus.permis.form.titol.nou=Nou permis
 expedient.tipus.permis.form.titol.modificar=Modificar permis
 expedient.tipus.permis.form.camp.tipus=Tipus
 expedient.tipus.permis.form.camp.principal=Principal
+expedient.tipus.permis.form.camp.unitat.organitzativa=Unitat organitzativa
 
 expedient.tipus.regla.titol=Regles de l'estat
 expedient.tipus.regla.accio.nou=Nova regla
@@ -1872,6 +1874,7 @@ expedient.tipus.integracio.notib.validacio=Errors de validació
 
 expedient.tipus.metadades.nti.actiu=Metadades NTI activades
 expedient.tipus.metadades.nti.organo=Codi DIR3 de l'òrgan associat
+expedient.tipus.metadades.nti.organo.placeholder=Codi DIR3 òrgan
 expedient.tipus.metadades.nti.clasificacion=Codi SIA del procediment associat
 expedient.tipus.metadades.nti.serie.documental=Sèrie documental
 expedient.tipus.metadades.nti.controller.guardat=Els canvis s'han guardat correctament
