--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2734,6 +2734,7 @@ comu.boto.descarregar=Descarregar
 comu.boto.processar=Processar
 comu.boto.refrescar=Refrescar
 comu.boto.migrar=Migrar
+comu.boto.actualitzar=Actualitzar
 comu.cap=Cap
 comu.tots=Tots
 comu.totes=Totes
@@ -3117,14 +3118,29 @@ procediment.llistat.columna.codi=Codi
 procediment.llistat.columna.nom=Nom
 procediment.llistat.columna.unitatOrganitzativa=Unitat organitzativa
 procediment.llistat.columna.codiSia=Codi SIA
+procediment.llistat.columna.comu=Comú
 procediment.llistat.columna.estat=Estat
 procediment.estat.enum.VIGENT=Vigent
 procediment.estat.enum.EXTINGIT=Extingit
 procediment.taula.actualitzar=Actualitzar procediments
+
 procediment.controller.actualitzar.ok=Procediments actualitzats correctament
 procediment.controller.actualitzar.error=Ha hagut un error en l''actualització dels procediments a les unitats organitzatives: {0}
 procediment.controller.actualitzar.error.generic=Ha hagut un error no controlat en l''actualització dels procediments
 
+procediment.actualitzacio.titol=Actualització de procediments
+procediment.actualitzacio.confirmacio=Voleu actualitzar els procediments amb la informació de ROLSAC?
+procediment.actualitzacio.cancelarActu=Voleu tancar la finestra d'actualització dels procediments amb la informació de ROLSAC? (Seguirà executant-se en segon pla)
+procediment.actualitzacio.procesActiu=Ja existeix un procés actualitzant els procediments. Esperi a que acabi a tornar-ho a intentar.
+procediment.actualitzacio.sense.canvis=Sense canvis
+procediment.actualitzacio.organ.no.sync=L&#39;&#242;rgan gestor d&#39;aquest procediment no est&#224; actualitzat
+procediment.actualitzacio.organs.no.sync=L&#39;entitat té procediments amb &#242;rgans gestors no actualitzats
+
+procediment.actualitzacio.camp.codi=Codi
+procediment.actualitzacio.camp.nom=Nom
+procediment.actualitzacio.camp.descripcio=Descripció
+procediment.actualitzacio.camp.comu=Comú
+procediment.actualitzacio.camp.unitatOrganitzativa=Unitat organitzativa
 
 Pattern=El format no és correcte
 typeMismatch=El format no és correcte
