#1742 Corregir missatge de confirmació despleant handlers propis

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1606,7 +1606,7 @@ expedient.tipus.accio.validacio.handler.parametres.obligatoris=El handler té els
 
 expedient.tipus.accio.desplegar.form.titol=Desplegament de handlers .jar dins el tipus d''expedient "{0} - {1}"
 expedient.tipus.accio.desplegar.flow=El tipus d'expedient no és per estats.
-expedient.tipus.accio.desplegar.form.success=El desplegament de la definició de procés s'ha realitzat correctament.
+expedient.tipus.accio.desplegar.form.success=S''han desplegat o actualitzat correctament {0} handlers: {1}
 expedient.tipus.accio.desplegar.arxiu.buit=No s'ha seleccionat cap arxiu o no conté cap informació
 expedient.tipus.accio.desplegar.error.lectura=Error llegint l'arxiu a desplegar
 
