#1723 Avís en importar document amb un flux no existent

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1515,6 +1515,7 @@ expedient.tipus.document.form.camp.portafirmes.flux.tipus.info=Permet escollir i
 expedient.tipus.document.form.camp.portafirmes.sequencia.firma=Seqüència de firma
 expedient.tipus.document.form.camp.id.flux.firma=Id. flux de firma
 expedient.tipus.document.form.camp.id.flux.firma.buit=Seleccioni un flux de firma
+expedient.tipus.document.form.camp.id.flux.firma.innexistent=El flux actual amb id "{0}" i nom "{1}" no està disponible. S''ha de substituir per un flux disponible dis del tipus d''expedient.
 expedient.tipus.document.form.camp.portafirmes.carrecs=Càrrecs
 expedient.tipus.document.form.camp.portafirmes.flux=Definir flux de firma seleccionat
 expedient.tipus.document.form.camp.portafirmes.flux.mostrar=Mostrar flux de firma
