#1661 Accés a expedients per permisos sobre unitats (Fase 5: Nova taula de paràmetres d'Helium)

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -118,6 +118,8 @@ unitat.arbre.expandeix=Expandeix tots
 unitat.arbre.contreu=Contreu tots
 unitat.arbre.contreu.expandeixSeleccionat=Expandeix seleccionat
 unitat.arbre.unitatObsoleta=La unitat està obsoleta
+unitat.organitzativa.llistat.unitat.arrel=Unitat arrel
+unitat.organitzativa.llistat.data.darrera.sinc=Data darrera sincronització
 
 unitat.controller.synchronize.ok=Sincronització realitzada amb èxit
 unitat.controller.synchronize.error=Error sincronitzant les unitats organitzatives
@@ -2799,6 +2801,7 @@ configuracio.parametres.accio.restaurar.confirmacio=Valors per defecte restaurat
 configuracio.parametres.accio.guardar.confirmacio=Valors guardats correctament
 configuracio.parametres.propagarEsborratExpedients=Propagar esborrat d'expedients
 configuracio.parametres.propagarEsborratExpedients.info=Si s'habilita es permetrà la propagació de l'esborrat d'expedients quan s'esborri un tipus d'expedient
+configuracio.parametres.unitats.organitzatives=Unitats organitzatives
 
 metriques.timers.llegenda=Llegenda:
 metriques.timers.pes=Pes: Nombre d'execucions x Temps mig d'una execució (ms)
