#1661 Accés a expedients per permisos sobre unitats organitzatives (OBSERVACIONS)

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -406,7 +406,7 @@ expedient.llistat.accio.reassignar.expedient.tipus.buit=No s'ha seleccionat cap 
 expedient.llistat.accio.reassignar.sense.permis=No es té permís de reassignació pel tipus d'expedient seleccionat
 expedient.llistat.exportacio.error=S''ha produït un error al generar el fitxer amb les dades dels expedients: {0}
 expedient.llistat.consulta_avanzada=Consulta avançada
-
+expedient.llistat.unitat.organitzativa.obsoleta=La unitat organitzativa està obsoleta
 expedient.llistat.document.confirm_esborrar=Estau segur que voleu esborrar aquest document?
 expedient.llistat.dada.confirm_esborrar=Estau segur que voleu esborrar aquesta dada?
 
@@ -2355,6 +2355,7 @@ anotacio.llistat.filtre.camp.dataInicial=Data inicial
 anotacio.llistat.filtre.camp.dataFinal=Data final
 anotacio.llistat.filtre.camp.expedientTipus=Expedient tipus
 anotacio.llistat.filtre.camp.estat=Estat
+anotacio.llistat.filtre.camp.unitat.organitzativa.desti=Unitat organitzativa destí
 anotacio.llistat.reintentar.consulta=Reintentar consulta
 anotacio.llistat.reintentar.consulta.title=Posa els intents a 0 de les anotacions que estiguin comunicades i no s'hagin pogut consultar durant els intents establerts.
 anotacio.llistat.reintentar.processament=Reintentar processament
