#1661 Accés a expedients per permisos sobre unitats organitzatives
- Sincronitzar amb les dates guardades a la taula de paràmetres
- Netejar filtres d'unitats i procediments.
- Recolocar botó per consultar o crear regles de Distribucio

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -119,9 +119,12 @@ unitat.arbre.contreu=Contreu tots
 unitat.arbre.contreu.expandeixSeleccionat=Expandeix seleccionat
 unitat.arbre.unitatObsoleta=La unitat està obsoleta
 unitat.organitzativa.llistat.unitat.arrel=Unitat arrel
-unitat.organitzativa.llistat.data.darrera.sinc=Data darrera sincronització
+unitat.organitzativa.llistat.data.sincronitzacio=Data sincronització
+unitat.organitzativa.llistat.data.actualitzacio=Data darrea actualtizació
+unitat.organitzativa.avis.obsoleta=La unitat està obsoleta
 
 unitat.controller.synchronize.ok=Sincronització realitzada amb èxit
+unitat.controller.synchronize.ko=Error no controllat en la sincronització d''unitats organitzatives: {0}
 unitat.controller.synchronize.error=Error sincronitzant les unitats organitzatives
 unitat.synchronize.dialog.header=Predicció de sincronització
 unitat.synchronize.prediction.splits=DIVISIONS
@@ -1889,6 +1892,14 @@ expedient.tipus.metadades.nti.arxiu.actiu=Integració amb arxiu activa
 expedient.tipus.metadades.nti.validacio = Errors de validació
 expedient.tipus.metadades.nti.procediment.comu=Procediment comú
 
+expedient.tipus.metadades.nti.unitat.organitzativa.no.trobada=No s''ha trobat la unitat organitzativa amb codi {0} dins de l''abre d''unitats organitzatives. 
+expedient.tipus.metadades.nti.unitat.organitzativa.no.vigent=La unitat amb codi {0} es troba en l''estat {1}
+expedient.tipus.metadades.nti.unitat.organitzativa.estat.V=vigent
+expedient.tipus.metadades.nti.unitat.organitzativa.estat.E=extingida
+expedient.tipus.metadades.nti.unitat.organitzativa.estat.A=anul·lada
+expedient.tipus.metadades.nti.unitat.organitzativa.estat.T=transitòria
+
+
 expedient.tipus.integracio.pinbal.validacio = Errors de validació
 expedient.tipus.integracio.pinbal.controller.guardat=Els canvis s'han guardat correctament
 expedient.tipus.intergracio.pinbal.actiu = Activar integració amb Pinbal
@@ -2418,7 +2429,7 @@ anotacio.llistat.accio.marcarPendent=Marcar pendent
 anotacio.llistat.accio.marcarPendent.success=L''anotació de registre "{0}" s'ha marcat com a pendent correctament
 anotacio.llistat.accio.marcarPendent.error=Error marcant com a pendent l''anotació amb id {0}: {1}
 anotacio.llistat.accio.reintentarConsulta=Reintentar
-anotacio.llistat.accio.reintentarConsulta.success=S'ha fixat el número d''intents a 0 a l''anotació de registre "{0}" correctament
+anotacio.llistat.accio.reintentarConsulta.success=S''ha fixat el número d''intents a 0 a l''anotació de registre "{0}" correctament
 anotacio.llistat.accio.reintentarConsulta.error=Error fixant el número d''intents a 0 per  l''anotació amb id {0}: {1}
 
 
