#1661 Accés a expedients per permisos sobre unitats organitzatives
- Mostrar informació de la UO actual en la pipella de metadades nti del
tipus d'expedient.
- Corregir la càrrega de l'arbre d'unitats vigents.

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1895,9 +1895,11 @@ expedient.tipus.metadades.nti.procediment.comu=Procediment comú
 expedient.tipus.metadades.nti.unitat.organitzativa.no.trobada=No s''ha trobat la unitat organitzativa amb codi {0} dins de l''abre d''unitats organitzatives. 
 expedient.tipus.metadades.nti.unitat.organitzativa.no.vigent=La unitat amb codi {0} es troba en l''estat {1}
 expedient.tipus.metadades.nti.unitat.organitzativa.estat.V=vigent
-expedient.tipus.metadades.nti.unitat.organitzativa.estat.E=extingida
-expedient.tipus.metadades.nti.unitat.organitzativa.estat.A=anul·lada
-expedient.tipus.metadades.nti.unitat.organitzativa.estat.T=transitòria
+expedient.tipus.metadades.nti.unitat.organitzativa.estat.E=extingit
+expedient.tipus.metadades.nti.unitat.organitzativa.estat.A=anul·lat
+expedient.tipus.metadades.nti.unitat.organitzativa.estat.T=transitori
+expedient.tipus.metadades.nti.unitat.oranitzativa.noves=Noves
+expedient.tipus.metadades.nti.unitat.organitzativa.transicio.tipus=Tipus de transició
 
 
 expedient.tipus.integracio.pinbal.validacio = Errors de validació
@@ -2722,6 +2724,10 @@ enum.document.tipus.portafirmes.prioritat.ALTA=Alta
 enum.document.tipus.portafirmes.prioritat.NORMAL=Normal
 enum.document.tipus.portafirmes.prioritat.BAIXA=Baixa
 enum.document.tipus.portafirmes.prioritat.MOLT_BAIXA=Molt baixa
+
+enum.tipus.transcicio.DIVISIO=Divisió
+enum.tipus.transcicio.FUSIO=Fusió
+enum.tipus.transcicio.SUBSTITUCIO=Substitució
 
 enum.idioma.CA=Català
 enum.idioma.ES=Castellà
