#1738 Revisar error carregant el formulari per modificar una variable amb codi xSISTRA2 i afegir validació

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -55,6 +55,7 @@ error.expedient.relacionar=Error al relacionar el expediente
 error.camp.codi.buit=El camp codi no pot estar buit
 error.camp.codi.char.nok=El codi no pot contenir punts
 error.camp.codi.maymin=El codi no pot començar amb una lletra majúscula i a continuació una minúscula
+error.camp.codi.minmay=El codi no pot començar amb una lletra minúscula i a continuació una majúscula
 error.camp.codi.char.espai=El codi no pot contenir espais en blanc
 error.camp.codi.char.caracters.nomespodencontenir=Els codis de variables només poden contenir caràcters sense accentuació que siguin majúscula, minúscula, número o guió baix.
 error.camp.codi.char.mayguionum=Els codis de variables no poden començar per majúscula seguida de minúscula, guió baix o número.
