1656 Error amb els controls tipus suggest

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -126,6 +126,7 @@ unitat.organitzativa.avis.obsoleta=La unitat està obsoleta
 unitat.controller.synchronize.ok=Sincronització realitzada amb èxit
 unitat.controller.synchronize.ko=Error no controllat en la sincronització d''unitats organitzatives: {0}
 unitat.controller.synchronize.error=Error sincronitzant les unitats organitzatives
+unitat.controller.suggest.uo.no_vigent=(No vigent)
 unitat.synchronize.dialog.header=Predicció de sincronització
 unitat.synchronize.prediction.splits=DIVISIONS
 unitat.synchronize.prediction.merges=FUSIONS
