Correccions d'errors trobats durant les proves de Helium 3.3.2 -Nova validació que no permeti canviar comú o no comú si ja té expedients iniciats. Tenir en compte Metadades NTI activades.

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1892,6 +1892,7 @@ expedient.tipus.metadades.nti.controller.guardat=Els canvis s'han guardat correc
 expedient.tipus.metadades.nti.arxiu.actiu=Integració amb arxiu activa
 expedient.tipus.metadades.nti.validacio = Errors de validació
 expedient.tipus.metadades.nti.procediment.comu=Procediment comú
+expedient.tipus.metadades.nti.procediment.comu.info=Aquest valor no es podrà canviar un cop hi hagi expedients d'aquest tipus d'expedient
 
 expedient.tipus.metadades.nti.unitat.organitzativa.no.trobada=No s''ha trobat la unitat organitzativa amb codi {0} dins de l''abre d''unitats organitzatives. 
 expedient.tipus.metadades.nti.unitat.organitzativa.no.vigent=La unitat amb codi {0} es troba en l''estat {1}
