Correccions d'errors trobats durant les proves de Helium 3.3.2 -Nova validació que no permeti canviar comú o no comú si ja té expedients iniciats

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -119,6 +119,7 @@ error.exist.exp.defproc=Existeixen expedients amb aquesta definició de procés
 error.exist.cons=Existeixen consultes que contenen camps que pertanyen a aquesta definició de procés
 error.exist.cons.df=La consulta "{0}" conté camps que pertanyen a la definició de procés {1} v.{2}
 error.exist.exp.tipexp=Existeixen expedients amb aquest tipus
+error.exist.exp.tipexp.no.procediment.comu=No es pot canviar el valor Procediment comú perquè existeixen expedients amb aquest tipus
 error.arxius.no.valid=Aquest arxiu no és un arxiu d'exportació vàlid
 error.arxiu.importar=Error llegint l'arxiu a importar\: 
 error.import.dades=Error en la importaci\u00F3 de dades\: 
