#1699 Error de validació en la creació d'un càrrec amb un mateix codi i grup diferent

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -34,6 +34,9 @@ error.area.nou.membre.codi.persona.repetit=El membre ja té un càrrec dins l'àrea
 error.area.nou.membre.carrec.inexistent=El càrrec no existeix
 error.area.pare.no.ella.mateixa=L''àrea no pot ser pare d''ella mateixa.
 
+error.carrec.validacio=Hi ha errors de validació
+error.carrec.codi.grup.repetit=Ja existeix un altre càrrec repetit relacionat amb aquest grup
+
 error.avis.codi.repetit=Ja existeix una altra avís amb aquest codi
 error.avis.validacio=Hi ha errors de validació
 error.avis.validacio.hores=El format de les hores i minuts és incorrecte 
