--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3182,3 +3182,8 @@ Size=La longitud ha d''estar entre {2} i {1}
 Size.java.lang.String=La longitud màxima és {1}
 Min=El valor ha de ser major o igual a {1}
 Max=El valor ha de ser menor o igual a {1}
+
+boto.eliminar.errors=Netejar errors
+boto.eliminar.errors.confirm=Voleu netejar els errors de l'expedient actual?
+boto.eliminar.errors.ok=S'han netejat els errors de l'expedient.
+boto.eliminar.errors.ko=Error al netejar els errors de l'expedient:
