Correccions errors Helium 3.3.2 (2024.03.27 17:00)
- Etiqueta tipus de document esmena no trobava traducció.

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2596,7 +2596,7 @@ anotacio.annex.detalls.camp.ntiTipusDocument.PREGUNTA=Pregunta
 anotacio.annex.detalls.camp.ntiTipusDocument.INTERPELACIO=Interpel·lació
 anotacio.annex.detalls.camp.ntiTipusDocument.RESPOSTA=Resposta
 anotacio.annex.detalls.camp.ntiTipusDocument.PROPOSICIO_NO_LLEI=Proposició no de llei
-anotacio.annex.detalls.camp.ntiTipusDocument.ESQUEMA=Esmena
+anotacio.annex.detalls.camp.ntiTipusDocument.ESMENA=Esmena
 anotacio.annex.detalls.camp.ntiTipusDocument.PROPOSTA_RESOLUCIO=Proposta de resolució
 anotacio.annex.detalls.camp.ntiTipusDocument.COMPAREIXENSA=Compareixença
 anotacio.annex.detalls.camp.ntiTipusDocument.SOLICITUD_INFORMACIO=Sol·licitud d'informació
@@ -2975,7 +2975,7 @@ nti.document.tipo.documental.PREGUNTA=Pregunta
 nti.document.tipo.documental.INTERPELACIO=Interpel·lació
 nti.document.tipo.documental.RESPOSTA=Resposta
 nti.document.tipo.documental.PROPOSICIO_NO_LLEI=Proposició no de llei
-nti.document.tipo.documental.ESQUEMA=Esmena
+nti.document.tipo.documental.ESMENA=Esmena
 nti.document.tipo.documental.PROPOSTA_RESOLUCIO=Proposta de resolució
 nti.document.tipo.documental.COMPAREIXENSA=Compareixença
 nti.document.tipo.documental.SOLICITUD_INFORMACIO=Sol·licitud d'informació
