Correccions i tancament Helium 3.3.2 (2024.04.16 18:00):
- Botó netejar en el llistat d'anotacions no fixava l'estat a Pendent
- Modal per notificar, informació del control de caducitat
- Enviar al portafirmes documents amb un flux definit des del handler.

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -120,7 +120,7 @@ unitat.arbre.contreu.expandeixSeleccionat=Expandeix seleccionat
 unitat.arbre.unitatObsoleta=La unitat està obsoleta
 unitat.organitzativa.llistat.unitat.arrel=Unitat arrel
 unitat.organitzativa.llistat.data.sincronitzacio=Data sincronització
-unitat.organitzativa.llistat.data.actualitzacio=Data darrea actualtizació
+unitat.organitzativa.llistat.data.actualitzacio=Data darrera actualtizació
 unitat.organitzativa.avis.obsoleta=La unitat està obsoleta
 
 unitat.controller.synchronize.ok=Sincronització realitzada amb èxit
@@ -565,7 +565,7 @@ expedient.document.portasignatures.enviament.reprocessar.error=Hi ha hagut un er
 
 notificacio.form.camp.data.programada.comment=Data en que es farà efectiu l'enviament de la notificació a Notific@
 notificacio.form.camp.data.caducitat.comment=El valor mínim és un dia després de l'enviament.
-notificacio.form.camp.retard.comment=Dies que la notificació romandrà a la seu abans de ser enviada via DEH o correu postal
+notificacio.form.camp.retard.comment=Dies que la notificació romandrà a la seu abans de ser enviada
 notificacio.form.camp.idioma=Idioma
 
 expedient.document.notificar.validacio.no.notificable=Per restriccions del NOTIB només es poden notificar documents de tipus .ZIP o convertibles a PDF ({0})
