--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2904,6 +2904,8 @@ etiqueta.exp.comentari=Comentari de l'expedient
 etiqueta.exp.iniciador=Iniciador de l'expedient
 etiqueta.exp.responsable=Responsable de l'expedient
 etiqueta.exp.data_ini=Data d'inici de l'expedient
+etiqueta.exp.data_fi=Data de fi de l'expedient
+etiqueta.exp.nif=NIF interessat de l'expedient
 etiqueta.exp.tipus=Tipus d'expedient
 etiqueta.exp.estat=Estat de l'expedient
 
