--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -120,8 +120,9 @@ unitat.arbre.contreu.expandeixSeleccionat=Expandeix seleccionat
 unitat.arbre.unitatObsoleta=La unitat està obsoleta
 unitat.organitzativa.llistat.unitat.arrel=Unitat arrel
 unitat.organitzativa.llistat.data.sincronitzacio=Data sincronització
-unitat.organitzativa.llistat.data.actualitzacio=Data darrera actualtizació
+unitat.organitzativa.llistat.data.actualitzacio=Data darrera actualització
 unitat.organitzativa.avis.obsoleta=La unitat està obsoleta
+unitat.organitzativa.cron.sync=Sincronització automàtica
 
 unitat.controller.synchronize.ok=Sincronització realitzada amb èxit
 unitat.controller.synchronize.ko=Error no controllat en la sincronització d''unitats organitzatives: {0}
