#1722 - Permetre crear fluxos de firma a nivell d'usuari

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -8,6 +8,7 @@ decorator.menu.avisos=Avisos
 decorator.menu.unitats.organitzatives=Unitats organitzatives
 decorator.menu.procediments=Procediments
 decorator.menu.tasques=Tasques
+decorator.menu.fluxes=Fluxos de firma
 decorator.menu.informes=Informes
 decorator.menu.consultes=Consultes
 decorator.menu.consultes.generic=Consulta general
@@ -1520,7 +1521,7 @@ expedient.tipus.document.form.camp.portafirmes.flux.tipus.info=Permet escollir i
 expedient.tipus.document.form.camp.portafirmes.sequencia.firma=Seqüència de firma
 expedient.tipus.document.form.camp.id.flux.firma=Id. flux de firma
 expedient.tipus.document.form.camp.id.flux.firma.buit=Seleccioni un flux de firma
-expedient.tipus.document.form.camp.id.flux.firma.innexistent=El flux actual amb id "{0}" i nom "{1}" no està disponible. S''ha de substituir per un flux disponible dis del tipus d''expedient.
+expedient.tipus.document.form.camp.id.flux.firma.innexistent=El flux actual amb id "{0}" i nom "{1}" no està disponible. S''ha de substituir per un flux disponible des del tipus d''expedient.
 expedient.tipus.document.form.camp.portafirmes.carrecs=Càrrecs
 expedient.tipus.document.form.camp.portafirmes.flux=Definir flux de firma seleccionat
 expedient.tipus.document.form.camp.portafirmes.flux.mostrar=Mostrar flux de firma
@@ -1550,8 +1551,19 @@ expedient.tipus.document.form.camp.portafirmes.flux.id.buit=No s'ha informat l'I
 expedient.tipus.document.form.camp.portafirmes.responsables.buit=Seleccioni els Responsables
 expedient.tipus.document.form.camp.portafirmes.flux.seleccionat=Flux de firma seleccionat: 
 expedient.tipus.document.form.camp.portafirmes.motiu.buit=No s'ha informat del motiu
+expedient.tipus.document.form.camp.portafirmes.fluxos.comuns=Fluxos de firma comuns
+expedient.tipus.document.form.camp.portafirmes.fluxos.usuari=Els meus fluxos
 
-
+fluxosFirma.taula.boto.nou=Nou flux de firma
+fluxosFirma.taula.camp.id=Identificador
+fluxosFirma.taula.camp.nom=Nom
+fluxosFirma.taula.camp.firmants=Firmants
+fluxosFirma.taula.boto.modificar=Modificar fluxe
+fluxosFirma.taula.modal.title=Edició de flux de firma
+fluxosFirma.taula.boto.eliminar=Eliminar fluxe
+fluxosFirma.taula.boto.eliminar.ok=El fluxe s'ha eliminat correctament.
+fluxosFirma.taula.boto.eliminar.ko=No s'ha pogut eliminar el fluxe
+fluxosFirma.taula.boto.crear.ok=El fluxe s'ha guardat correctament.
 
 #expedient.tipus.document.validacio.codi.repetit=Aquest codi ja existeix
 expedient.tipus.document.controller.creat=El document s'ha creat correctament
