#1724 - Afegir un monitor de les darreres excepcions produïdes

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -7,6 +7,7 @@ decorator.menu.anotacions=Anotacions
 decorator.menu.avisos=Avisos
 decorator.menu.unitats.organitzatives=Unitats organitzatives
 decorator.menu.procediments=Procediments
+decorator.menu.excepcions=Excepcions
 decorator.menu.tasques=Tasques
 decorator.menu.fluxes=Fluxos de firma
 decorator.menu.informes=Informes
@@ -3203,3 +3204,14 @@ boto.eliminar.errors=Netejar errors
 boto.eliminar.errors.confirm=Voleu netejar els errors de l'expedient actual?
 boto.eliminar.errors.ok=S'han netejat els errors de l'expedient.
 boto.eliminar.errors.ko=Error al netejar els errors de l'expedient:
+
+excepcio.list.columna.data=Data
+excepcio.list.columna.peticio=Petició
+excepcio.list.columna.params=Paràmetres
+excepcio.list.columna.message=Missatge
+excepcio.list.columna.objecte.class=Objecte tipus
+excepcio.detall.camp.objecte.id=Id
+excepcio.detall.titol=Detall de l'excepció
+excepcio.list.titol=Darreres excepcions produïdes
+excepcio.detall.camp.param1=Paràmetre 1
+excepcio.detall.camp.param2=Paràmetre 2
